--- a/package.json
+++ b/package.json
@@ -24,5 +24,11 @@
   "homepage": "https://github.com/JhonattanEscorihuela/NodeJs#readme",
   "dependencies": {
     "picocolors": "^1.0.0"
+  },
+  "devDependencies": {
+    "standard": "^17.1.0"
+  },
+  "eslintConfig": {
+    "extends": "standard"
   }
 }
