--- a/2.Clase 2/package.json
+++ b/2.Clase 2/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "1.http.js",
   "scripts": {
-    "dev": "nodemon 1.http.js"
+    "dev:1": "nodemon 1.http.js",
+    "dev:2": "node --watch 3.express.js"
   },
   "keywords": [],
   "author": "",
@@ -15,5 +16,8 @@
   },
   "eslintConfig": {
     "extends": "standard"
+  },
+  "dependencies": {
+    "express": "4.18.2"
   }
 }
